# ahmednule

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
.opencode/plans/: fix-projects-certifications.md
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts
app/about/: page.tsx
app/contact/: page.tsx
app/projects/: page.tsx
components/: about-hero.tsx  app-sidebar.tsx  aurora-background.tsx  chatbot.tsx  companion-bot.tsx  contact-cta.tsx  contact-form.tsx  contact-header.tsx  contact-hero.tsx  contact-info.tsx  cta-section.tsx  custom-cursor.tsx  divider.tsx  experience-section.tsx  featured-projects.tsx  github-activity.tsx  gradient-text.tsx  hero-3d.tsx  hero-section.tsx  interests-section.tsx  iot-portfolio-home.tsx  layout-content.tsx  magnetic-button.tsx  navbar.tsx  project-card.tsx  project-spotlight.tsx  projects-grid.tsx  projects-header.tsx  projects-hero.tsx  scramble-text.tsx  scroll-progress.tsx  section-header.tsx  section.tsx  sidebar.tsx  skills-section.tsx  spotlight.tsx  stats-section.tsx  tech-icon.tsx  technologies-section.tsx  testimonials-section.tsx  (+3 more)
components/3d/: character.tsx  environment.tsx  experience.tsx  html-sections.tsx
components/about/: certifications-section.tsx  experience-section.tsx  mastery-section.tsx  tech-stack-section.tsx
components/chat/: floating-chat.tsx
hooks/: use-speech-recognition.ts  use-speech-synthesis.ts
lib/: chat-context.ts  chat-handler.ts  experiences.ts  projects.ts  testimonials.ts
lib/about/: backend.ts  (+4 more)
types/: about.ts
(+92 files in other folders)
